    + L'affichage des listes des marques, substrats et fichiers XML sont triées par ordre alphabétique
    + Lors de l'ajout d'un nouveau champ titre dans le calendrier, les données sont encodées en JSON pour éviter les caractères parasites
    + Ajout d'un champ 'important' dans les évènements du calendrier permettant de générer des alertes

-- Yann Genevois <yann.genevois@cultibox.fr> Sun Dec  1 22:41:08 CET 2013


Cultibox (1.2.02) precise; urgency=low
    + Passage à XAMPP 1.8.3 pour windows Vista, 7 et 8
    + Epuration de Joomla
    + Passage a XAMPP 1.8.2 pour Widows XP

-- Yann Genevois <yann.genevois@cultibox.fr> Sun Nov 24 23:46:00 CET 2013


Cultibox (1.2.01) precise; urgency=low
    + Passage a XAMPP 1.8.3 pour Mac Os X et Linux

-- Yann Genevois <yann.genevois@cultibox.fr> Sun Nov 17 14:58:13 CET 2013


Cultibox (1.1.38) precise; urgency=low
    + Correction du passage en paramètre d'une variable Int dans un appel Ajax (formatage de la carte SD)
    + Modification du texte et de l'image du tooltip de calcul des coûts
    + Mise en place d'un script sql d'update de la base joomla plutôt qu'une recréation de la base à chaque installation

-- Yann Genevois <yann.genevois@cultibox.fr> Wed Nov  6 12:53:01 CET 2013



Cultibox (1.1.37) precise; urgency=low
    + Correction de l'affichage des titres dans le calendrier
    + La première colonne du mois en cours correspond à un lundi et non plus un dimanche
    + Ajout et correction des fichiers XML des calendriers d'engrais
    + Diverses corrections du calendrier

-- Yann Genevois <yann.genevois@cultibox.fr> Sun Nov  3 11:30:44 CET 2013


Cultibox (1.1.36) precise; urgency=low
    + Modification de la taille de l'image de la cultibox pour rendre accéssible les menus en dessous
    + Ajout d'informations sur le calcul du coût réel et théorique dans l'onglet des coûts
    + Correction du filtre sur le champ substrat sans la carte SD  breanchée