@@ -121,9 +121,9 @@ function(){
 <table class="table_width">
     <tr>
         <td class="border_note_desc"></td>
-        <td class="image_note"><?php if((!empty($note['image']))&&(!empty($note['link']))) { ?><?php if(strcmp($note['type_link'],"mail")==0) { ?><a href="mailto:<?php echo $note['link']; ?>" <?php if(strcmp($note['type_link'],"external")==0) { ?>target="_blank" <?php } ?>><img src="main/libs/img/<?php echo $note['image']; ?>" alt="<?php echo $note['title']; ?>" /></a> <?php } else { ?><a href="<?php echo $note['link']; ?>" <?php if(strcmp($note['type_link'],"external")==0) { ?>target="_blank" <?php } ?>><img src="main/libs/img/<?php echo $note['image']; ?>" alt="<?php echo $note['title']; ?>" /></a><?php } ?>
+        <td class="image_note"><?php if((!empty($note['image']))&&(!empty($note['link']))) { ?><?php if(strcmp($note['type_link'],"mail")==0) { ?><a href="mailto:<?php echo $note['link']; ?>" <?php if(strcmp($note['type_link'],"external")==0) { ?>target="_blank" <?php } ?> class="note_link"><img src="main/libs/img/<?php echo $note['image']; ?>" alt="<?php echo $note['title']; ?>" /></a> <?php } else { ?><a href="<?php echo $note['link']; ?>" <?php if(strcmp($note['type_link'],"external")==0) { ?>target="_blank" <?php } ?> class="note_link"><img src="main/libs/img/<?php echo $note['image']; ?>" alt="<?php echo $note['title']; ?>" /></a><?php } ?>
                                <?php } elseif((!empty($note['image']))&&(empty($note['link']))) { ?><img src="main/libs/img/<?php echo $note['image']; ?>" alt="<?php echo $note['title']; ?>" /></td>
-                                <?php } else { ?><?php if(strcmp($note['type_link'],"mail")==0) { ?><a href="mailto:<?php echo $note['link']; ?>"><?php echo $note['link']; ?></a> <?php } else { ?><a href="<?php echo $note['link']; ?>" <?php if(strcmp($note['type_link'],"external")==0) { ?>target="_blank" <?php } ?>><?php echo $note['link']; ?></a><?php } ?>
+                                <?php } else { ?><?php if(strcmp($note['type_link'],"mail")==0) { ?><a href="mailto:<?php echo $note['link']; ?>" class="note_link"><?php echo $note['link']; ?></a> <?php } else { ?><a href="<?php echo $note['link']; ?>" <?php if(strcmp($note['type_link'],"external")==0) { ?>target="_blank" <?php } ?> class="note_link"><?php echo $note['link']; ?></a><?php } ?>
 
                                 <?php } ?>
         <td class="border_note_desc"></td>
